# bluek

./: .gitignore  README.md  l2cap-vs-dbus.md  multi-process-access.md  pyproject.toml
bench/: README.md  config.py  report.py  requirements.txt  runner.py
bench/fixtures/: bluetoothd.py  fake_peripheral.py  peripheral_bumble.py  peripheral_supervisor.py  peripheral_vhci.py
bench/measure/: clock.py  cpu.py  jsonout.py  memory.py  recorder.py
bench/microbench/: echo.py
bench/scenarios/: advert.py  common.py  notify.py  read_write.py
bench/stacks/: base.py  lib_bleak.py  lib_bluek.py  micro_fake.py  raw_dbus.py  raw_l2cap.py
bleaz/: __init__.py  _att.py  _hci.py  _mgmt.py  characteristic.py  client.py  pairing.py  shadow.py  uuids.py
bleaz/_shadow/bleak/: __init__.py  exc.py  uuids.py
bleaz/_shadow/bleak/backends/: characteristic.py  device.py  scanner.py  service.py
bleaz/_shadow/bleak/backends/bluezdbus/: agent.py
bleaz/_shadow/bleak_retry_connector/: __init__.py
bluek/: __init__.py  _att.py  _hci.py  _l2cap.py  _util.py  characteristic.py  client.py  device.py  pairing.py  scanner.py  shadow.py
bluek/_shadow/bleak/: __init__.py  exc.py  uuids.py
bluek/_shadow/bleak/backends/: characteristic.py  device.py  scanner.py  service.py
bluek/_shadow/bleak/backends/bluezdbus/: agent.py
bluek/_shadow/bleak_retry_connector/: __init__.py
examples/: spike.py
tests/: test_shadow.py  test_unit.py
