[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bleaz"
version = "0.1.0"
description = "A bleak-compatible BLE central API for Linux, talking to the in-kernel BlueZ stack via sockets (no D-Bus, no exclusive HCI ownership)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Fabian" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/fl4p/bleaz"

[tool.setuptools.packages.find]
include = ["bleaz*"]
